tests/error/type_errors/call_unexpected_arg.err
Error: Too many arguments (at $FILE:6:18)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return foo(x, x)
  |                   ^ Unexpected argument (expected 1, got 2)

Note: Function signature is `int -> int`

Guppy compilation failed due to 1 previous error
